--- a/index.html
+++ b/index.html
@@ -60,13 +60,33 @@
     </div>
   </header>
 
-  <!-- About Section -->
-  <section id="about" class="section-padding">
+ <!-- About Section -->
+<section id="about" class="section-padding">
     <div class="container">
       <h2 class="text-center">About Us</h2>
-      <p class="text-muted text-center">Founded in 2019 by Harrison Okoth, Harry Porter Digital Services specializes in data analytics, digital solutions, and technical writing. Operating globally, we provide tailored services that empower businesses to thrive in a data-driven world.</p>
+      
+      <p class="text-muted text-center">
+        Founded in 2019 by Harrison Okoth, Harry Porter Digital Services specializes in data analytics, digital solutions, and technical writing. We provide tailored services that empower businesses to thrive in a data-driven world, serving both local and global clients remotely.
+      </p>
+  
+      <h3>Who We Are</h3>
+      <p>
+        We are a team of experts in software engineering, statistical analysis, machine learning, and data visualization, committed to delivering data-driven solutions that help businesses grow.
+      </p>
+  
+      <h3>Our Expertise</h3>
+      <p>
+        With deep expertise in software engineering, statistical analysis, machine learning, and data visualization, we empower organizations to make informed decisions and address unique challenges, ensuring precision and flexibility in every solution.
+      </p>
+  
+      <h3>Our Approach</h3>
+      <p>
+        We combine technical proficiency with the ability to communicate complex data insights clearly and effectively. By leveraging a diverse talent pool, we offer innovative and adaptable services to help businesses achieve their strategic goals.
+      </p>
     </div>
   </section>
+  
+  
 
   <!-- Services Section -->
   <section id="services" class="section-padding bg-light">
