added some more descriptions on about us

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
         We are a team of experts in software engineering, statistical analysis, machine learning, and data visualization, committed to delivering data-driven solutions that help businesses grow.
       </p>
   
-      <h3>Our Expertise</h3>
+      <h3>Our Expertise
+        
+      </h3>
       <p>
         With deep expertise in software engineering, statistical analysis, machine learning, and data visualization, we empower organizations to make informed decisions and address unique challenges, ensuring precision and flexibility in every solution.
       </p>
