--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       <p class="text-center">Reach out to us for innovative data solutions.</p>
       <div class="text-center">
         <p><i class="fas fa-phone-alt"></i> Phone: <a href="tel:+254794112226">+254 794 112 226</a></p>
-        <p><i class="fas fa-envelope"></i> Email: <a href="mailto:info@hpds.com">info@hpds.com</a></p>
+        <p><i class="fas fa-envelope"></i> Email: <a href="mailto:info@hpds.com">info@hpds.com/hpdservicez@gmail.com</a></p>
         <p><i class="fab fa-twitter"></i> Twitter: <a href="https://twitter.com/hpdservices" target="_blank">@hpdservices</a></p>
         <p><i class="fab fa-facebook"></i> Facebook: <a href="https://web.facebook.com/profile.php?id=100063624923362" target="_blank">Harry Porter Digital Services</a></p>
       </div>
