--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
     .list-group-item {
       font-size: 1.2rem;
     }
+.contact-info p {
+  display: flex;
+  align-items: center;  /* Aligns icon and text vertically */
+  justify-content: center;  /* Centers both icon and text horizontally */
+  margin-bottom: 10px;  /* Optional: space between the items */
+}
+
+.contact-info i {
+  margin-right: 10px;  /* Adds space between the icon and the text */
+  font-size: 1.2em;  /* Optional: adjust icon size */
+}
+
+    
   </style>
 </head>
 <body>
@@ -172,19 +185,20 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="section-padding">
-    <div class="container">
-      <h2 class="text-center">Contact Us</h2>
-      <p class="text-center">Reach out to us for innovative data solutions.</p>
-      <div class="text-center">
-        <p><i class="fas fa-phone-alt"></i> Phone: <a href="tel:+254794112226">+254 794 112 226</a></p>
-        <p><i class="fas fa-envelope"></i> Email: <a href="mailto:info@hpds.com">info@hpds.com/hpdservicez@gmail.com</a></p>
-        <p><i class="fab fa-twitter"></i> Twitter: <a href="https://twitter.com/hpdservices" target="_blank">@hpdservices</a></p>
-        <p><i class="fab fa-facebook"></i> Facebook: <a href="https://web.facebook.com/profile.php?id=100063624923362" target="_blank">Harry Porter Digital Services</a></p>
-      </div>
+<!-- Contact Section -->
+<section id="contact" class="section-padding">
+  <div class="container">
+    <h2 class="text-center">Contact Us</h2>
+    <p class="text-center">Reach out to us for innovative data solutions.</p>
+    <div class="contact-info text-center">
+      <p><i class="fas fa-phone-alt"></i> Phone: <a href="tel:+254794112226">+254 794 112 226</a></p>
+      <p><i class="fas fa-envelope"></i> Email: <a href="mailto:info@hpds.com">info@hpds.com/hpdservicez@gmail.com</a></p>
+      <p><i class="fab fa-twitter"></i> Twitter: <a href="https://twitter.com/hpdservices" target="_blank">@hpdservices</a></p>
+      <p><i class="fab fa-facebook"></i> Facebook: <a href="https://web.facebook.com/profile.php?id=100063624923362" target="_blank">Harry Porter Digital Services</a></p>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Footer -->
   <footer class="bg-dark text-white text-center py-3">
